--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 @import url('bootstrap.min.css');
 
 html, body {
-    margin-top: 20px;
+    margin-top: 0px;
     height: 100%;
     
 }
@@ -31,6 +31,10 @@ body {
     transition: background-image 1s;
     background-attachment: fixed;
 }
+.col-12{
+    padding: 10px 10px 0px 10px;
+}
+
 
 /* FONDO DESENFOQUE */
 
@@ -101,17 +105,18 @@ body {
 }
 
 .info-current-song h2 {
-    font-size: 34px;
+    font-size: 30px;
     text-transform: uppercase;
     font-weight: 800;
 	text-shadow: 4px 4px 5px rgba(0, 0, 0, 0.8);
-   
+    margin-left: 3%;
 }
 
 .info-current-song h3 {
-    font-size: 20px;
+    font-size: 19px;
     font-weight: 600;
     text-shadow: 4px 4px 5px rgba(0, 0, 0, 0.8);
+	margin-left: 3%;
 }
 
 .current-song {
