--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
     background-attachment: fixed;
 }
 .col-12{
-    padding: 10px 10px 0px 10px;
+    top: 10px;
 }
 
 
@@ -105,7 +105,7 @@ body {
 }
 
 .info-current-song h2 {
-    font-size: 34px;
+    font-size: 30px;
     text-transform: uppercase;
     font-weight: 800;
 	text-shadow: 4px 4px 5px rgba(0, 0, 0, 0.8);
@@ -113,7 +113,7 @@ body {
 }
 
 .info-current-song h3 {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 600;
     text-shadow: 4px 4px 5px rgba(0, 0, 0, 0.8);
 	
